2012-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-open-connection): Report the error message if the nntp
	server can't be reached.

	* nnimap.el (nnimap-retrieve-group-data-early): Keep track of how many
	groups we do a total scan for.
	(nnimap-wait-for-response): Say that we're doing a total scan, if we're
	doing that.

2012-01-31  Jim Meyering  <jim@meyering.net>

	* gnus-agent.el (gnus-agent-expire-unagentized-dirs):
        Correct a comment (insert "not") and hide nominally-doubled "to".

2012-01-31  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: No Gnus v0.19 is released.

2012-01-30  Philipp Haselwarter  <philipp.haselwarter@gmx.de>  (tiny change)

	* gnus-agent.el (gnus-agent-auto-agentize-methods): Point to the Agent
	section in the manual.

2012-01-30  Lars Ingebrigtsen  <larsi@gnus.org>

	* rfc2047.el (rfc2047-encode-region): Allow not folding the encoded
	words.
	(rfc2047-encode-string): Ditto.
	(rfc2047-encode-parameter): Don't fold parameters.  Some MUAs do not
	understand folded filename="..." parameters, for instance.

	* nnimap.el (nnimap-wait-for-response): Include the imap server name in
	the message for greater debuggability.

2012-01-28  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-view.el (mm-display-inline-fontify): Bind `font-lock-support-mode'
	instead of setting it locally, since the latter doesn't seem to have
	any effect (most of the time).

2012-01-27  Elias Pipping  <pipping@lavabit.com>  (tiny change)

	* shr.el (shr-browse-url): Fix the name of the `browse-url-mail'
	function call.

2012-01-27  Vida Gábor  <vidagabor@gmail.com>  (tiny change)

	* gnus-demon.el (gnus-demon-run-callback, gnus-demon-init): Convert to
	seconds, and make the repeat clause with HH:MM specs work as
	documented.

2012-01-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* proto-stream.el (proto-stream-capability-open): Fall back on
	:end-of-command if :end-of-capability doesn't exist.

2012-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>
